<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

		<TextView 
		    android:id="@+id/dlg_mk_info"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:padding="20dp"
		    android:gravity="center"
		    android:text="@string/check_information"
		    android:textSize="22sp"
		    android:background="@drawable/item_background"/>
		<View 
		    android:layout_width="match_parent"
		    android:layout_height="2px"
		    android:background="#cccc99"/>
		<TextView 
		    android:id="@+id/dlg_mk_modify"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:padding="20dp"
		    android:gravity="center"
		    android:text="@string/modify_content"
		    android:textSize="22sp"
		    android:background="@drawable/item_background"/>
		<View 
		    android:layout_width="match_parent"
		    android:layout_height="2px"
		    android:background="#cccc99"/>
		<TextView 
		    android:id="@+id/dlg_mk_delete"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:padding="20dp"
		    android:gravity="center"
		    android:text="@string/delete_key"
		    android:textSize="22sp"
		    android:background="@drawable/item_background"/>
    </LinearLayout>

</RelativeLayout>