<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/dlg_tv_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:text="@string/name"
                android:textSize="18sp" />

			<EditText
			    android:id="@+id/dlg_et_key"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="30dp"
			    android:layout_marginRight="30dp"
			    android:layout_toRightOf="@+id/dlg_tv_key" />
           
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/dlg_tv_pswd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:text="@string/password"
                android:textSize="18sp" />

			<EditText
			    android:id="@+id/dlg_et_pswd"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_toRightOf="@+id/dlg_tv_pswd"
			    android:layout_marginLeft="30dp"
			    android:layout_marginRight="30dp"
			    android:inputType="numberPassword" />
           
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/dlg_tv_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:text="@string/type"
                android:textSize="18sp" />

			<Spinner
			    android:id="@+id/dlg_spin_type"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="30dp"
			    android:layout_marginRight="30dp"
			    android:layout_toRightOf="@+id/dlg_tv_type"
			    android:entries="@array/type"/>
           
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>